--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'get-schwifty';
+  src: url('/fonts/get_schwifty.ttf');
+}
+
 html,
 body {
   padding: 0;
